# DNA-Kmer-Speed-Test

./: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  extract_data.sh  generate.sh  render_table.sh
.github/workflows/: README.md  c.yml  speed-test-c.yml  speed-test-cpp.yml  speed-test-csharp.yml  speed-test-erlang.yml  speed-test-go.yml  speed-test-haskell.yml  speed-test-java.yml  speed-test-js.yml  speed-test-lua.yml  speed-test-perl.yml  speed-test-php.yml  speed-test-python.yml  speed-test-rust.yml  speed-test.yml
c/: Makefile  main.c
coffeescript/: Makefile  main.coffee
cpp/: Makefile  main.cc
csharp/: Makefile  Program.cs
erlang/: Makefile  kmer.erl
go/: Makefile  main.go
haskell/: Makefile  haskell.cabal
haskell/app/: Main.hs
java/: Makefile
java/src/: Main.java
js/: Makefile  main.js
julia/: main.jl
lua/: Makefile  kmers.lua
mojo/: Makefile  main.mojo
perl/: Makefile  main.pl
php/: Makefile  main.php
python/: Makefile  main.py
ruby/: main.rb
rust/: .gitignore  Cargo.toml  Makefile  README.md
rust/src/: main.rs
