[package]
name = "rust_dna_kmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.0"
num_cpus = "1.14.0"

[features]
1kmers = []
2kmers = []
3kmers = []
4kmers = []
5kmers = []
6kmers = []
7kmers = []
8kmers = []
9kmers = []
10kmers = []
11kmers = []
12kmers = []
13kmers = []
14kmers = []
15kmers = []
16kmers = []
17kmers = []
18kmers = []
19kmers = []